<resources>
    <string name="app_name">Education Sector EMIS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Loading</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="role">Teacher</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="collect_facility">Collect Facility</string>
    <string name="offline_data">Offline Data</string>
    <string name="upload">Upload</string>
    <string name="facility_data">Facility Data</string>
    <string name="benificiary_data">Benificiary Data</string>
    <string name="collect_benificiary">Collect Beneficiary</string>
    <string name="tryagain">Try Again</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="exit_msg">Do you want to close</string>
    <string name="logout_msg"> Do you want to Logout</string>
    <string name="no_phone_number">No Phone Number Found</string>
    <string name="save_exit"><![CDATA[Save & Exit]]></string>
    <string name="submit_it_to_supervisor">"Submit it to Supervisor "</string>
    <string name="id">Id</string>
    <string name="status">Status</string>
    <string name="sww">Something Went Wrong</string>
    <string name="no_content_found">No Content Found</string>
    <string name="please_select_date">Please Select Date</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="indicator">Indicator</string>
    <string name="datetype">yyyy-MM-dd</string>
    <string name="date_display_format">dd-MMM-yyyy</string>
    <string name="facility_id_title">Facility Id</string>
    <string name="save">Save</string>
    <string name="username_password_not_match">Username/Password do not match.</string>
    <string name="swr">Something Went Wrong</string>
    <string name="fld">Failed To Load Data</string>
    <string name="no_beneficiary">There is no beneficiary to save</string>
    <string name="no_facility"> There is no facility to save </string>
    <string name="no_instance_indicators">There is no indicators to save for the selected instance</string>
    <string name="data_save_success">Data Saved Successfully</string>
    <string name="valid_email">Please Enter Valid Email</string>
    <string name="personal_details_tv">Personal Contact Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facility_tv">Facility Name</string>
    <string name="create_beneficiary">Create Beneficiary</string>
    <string name="add_beneficiary">Add New Beneficiary</string>
    <string name="progress_id">Progress Id</string>
    <string name="facility_id">Facility Id*</string>
    <string name="name_of_student">Name of Student*</string>
    <string name="father_name">Father\'s Name*</string>
    <string name="mother_name">Mother\'s Name*</string>
    <string name="fcnid">FCN Id</string>
    <string name="beneficiary_camp">Beneficiary Camp*</string>
    <string name="beneficiary_block">Beneficiary Block*</string>
    <string name="beneficiary_sub_block">Beneficiary Sub Block*</string>
    <string name="dob">Date of Birth*</string>
    <string name="enrollment_date">Enrollment Date</string>
    <string name="dataholder_name">Dataholder Name</string>
    <string name="dataholder_phone">Dataholder Phone</string>
    <string name="remarks">Remarks</string>
    <string name="lfLocation">LF Location (Camp)</string>
    <string name="programmingPartner">Programming Partner</string>
    <string name="implementationPartner">Implementation Partner</string>
    <string name="unchr_id">Unchr Id *</string>
    <string name="active"> Disengage </string>
    <string name="deactive"> Re-engage </string>
    <string name="deactive_string"> Do you want to Change?</string>
    <string name="select_camp">Select Camp</string>
    <string name="deactived">Beneficiary Deactivated</string>
    <string name="submit">Submit</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="disabled">Disabled</string>
    <string name="los">Level of Study</string>
    <string name="upload_beneficiary">Upload Beneficiary</string>
    <string name="notification">Notification</string>

    <string-array name="sex">
        <item> Male </item>
        <item> Female </item>
        <item> Others</item>
    </string-array>
    
    <string-array name="disabled">
        <item> No </item>
        <item> Yes </item>
    </string-array>

    <string-array name="los">
        <item> Level 1</item>
        <item> Level 2 </item>
        <item> Level 3 </item>
        <item> Level 4 </item>
    </string-array>
</resources>
